Squashed 'src/Inform6/' changes from 2905f3d..d9e45a1
REVERT: 2905f3d Update README.md
REVERT: 96e9c96 Create README.md
REVERT: baecb53 Update notes for latest commits
REVERT: 12e9936 Merge pull request #39 from erkyrath/internal-directs
REVERT: 99002f1 Merge pull request #38 from erkyrath/ifdef-in-switch
REVERT: dfabfe5 Exclude all directives from being used inside a function or object definition, with these exceptions:
REVERT: 6bb3c03 Fix for https://github.com/DavidKinder/Inform6/issues/35
REVERT: e2a6c4a Merge pull request #37 from erkyrath/z3dictbug
REVERT: c9fc110 Fix for "Extra copies of dictionary words in z3"
REVERT: b83e486 Update release notes with changes added since 6.34
REVERT: 8eb4768 Bump version to 6.35 (development)
REVERT: 589c3ae Merge pull request #34 from erkyrath/unix-options
REVERT: ac28519 --path and --addpath options.
REVERT: 242b5b2 Handle --config file (to load ICL commands).
REVERT: 083ccb5 Check that "--opt foo=val" contains an equals sign.
REVERT: 79b06d2 Fix up execute_icl_command to avoid any chance of buffer overflow.
REVERT: 1a8c11c Define command parsing buf size with a constant. Use it consistently. Fix the banner() routine to avoid the chance of buffer overflow.
REVERT: 9b46a9e Mention Glulx in the help text.
REVERT: 50e4e2c Mention new options in -h (and --help!)
REVERT: 409d1d8 Divide up help printf() a bit.
REVERT: 32d9d73 Handling of --opt on the command line.
REVERT: e62eb4e Merge pull request #32 from erkyrath/default-language
REVERT: 9879ff3 Header #define for the default language. The default default language is "English"
REVERT: 077038c Merge pull request #29 from erkyrath/v3-prop-overflow
REVERT: ae43732 Fix for https://github.com/DavidKinder/Inform6/issues/27
REVERT: aa0ab2a Merge pull request #25 from erkyrath/ifv5-glulx
REVERT: 8f28c24 The ifv3 and ifv5 directive are now clear (in their implementation) that ifv3 excludes Glulx and ifv5 includes Glulx.
REVERT: 9d0ae93 Merge pull request #24 from erkyrath/doc-1094
REV

--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Inform Release Notes</h1>
-<h3>Inform Compiler 6.30 to 6.35<br>Inform Library 6/11</h3>
+<h3>Inform Compiler 6.34, 6.33, 6.32, 6.31, 6.30<br>Inform Library 6/11</h3>
 
 <h2>Introduction</h2>
 This is a maintenance release of the Inform system for creating adventure games, intended to address 
@@ -41,50 +41,8 @@ suggestions, providing support and facilities, testing, and so on &mdash; for th
 listed. So instead, this is a general thank-you to everybody who has made this release happen, and 
 specific ones to Graham for permitting it in the first place, and to Andrew for his pioneering work on 
 Glulx.
-
-<h2>Compiler 6.35</h2>
-These are the changes delivered in version 6.35 of the Inform compiler.
-
-<h3>Features added</h3>
-<ul>
-<li><p>Some Unix-style command line options are now supported, primarily to avoid the use of $ in command
-lines (although the old syntax is still supported). The new syntax for these options is:
-<pre>
-  --help
-  --path PATH=dir
-  --addpath PATH=dir
-  --list
-  --size huge, --size large, --size small
-  --helpopt SETTING
-  --opt SETTING=number
-  --config filename
-</pre>
-</ul>
-
-<h3>Bugs fixed</h3>
-<ul>
-<li><p>Only the following directives are now allowed in a function or object definition: all others give
-an error:
-<pre>
-  #ifv3
-  #ifv5
-  #ifdef
-  #ifndef
-  #iftrue
-  #iffalse
-  #ifnot
-  #endif
-  #message
-  #origsource
-  #trace
-</pre>
-<li><p>An <tt>#ifdef</tt> statement at the start of a <tt>switch</tt> block now compiles correctly, and no
-longer gives a spurious error.
-<li><p>If a common property array overflows when compiling to Z-code version 3, the object is no longer
-corrupted.
-<li><p>When compiling to Z-code version 3, dictionary words are now correctly truncated at 6 z-characters
-(instead of 9).
-</ul>
+There are, naturally, sure to be imperfections in the release, and these should be reported through the
+<a href="http://inform7.com/mantis/">Inform bug tracker</a>.
 
 <h2>Compiler 6.34</h2>
 These are the changes delivered in version 6.34 of the Inform compiler.
@@ -118,12 +76,6 @@ e.g.
 <li><p>It has always been possible to replace the paths used by the compiler with a command line option of the
 form <tt>+include_path=foo</tt>. It is now possible to add to an existing path without replacing it by using
 an additional '+' character, like so: <tt>++include_path=foo</tt>.
-<li><p>The <tt>Replace</tt> directive can now be applied to routines in any file, whether it has the <tt>System_file</tt> directive or not. <tt>Replace</tt> also now works on recursive functions, which it previously did not. Its behavior can now be described this way:
-<pre>
-  Replace Func;
-  Replace Func OriginalFunc;
-</pre>
-Multiple definitions of <tt>Func()</tt> may follow this directive. <tt>Func</tt> will refer to the last-defined version, except that definitions in normal files are preferred over definitions in <tt>System_file</tt> files or the veneer. With the two-symbol form (introduced in 6.33), the latter symbol will refer to the <em>first</em>-defined version of the function.
 <li><p>A new <tt>Origsource</tt> directive has been added to allow a record of the location of the relevant in
 a higher-level language that has been converted to Inform 6. (In practice, this will very likely be the location in
 an Inform 7 source.) The syntax is
@@ -182,7 +134,7 @@ very long verbs would crash the compiler. [Mantis 2023]
 <li><p>Compiling to Z-code version 3 has shown a number of regressions since Inform 6.15:
  <ul>
  <li>Diverted actions, of the form <tt>&lt;&lt;ACTION&gt;&gt;</tt>, are fixed.
- <li>The veneer routine <tt>RA__Pr()</tt> can be used.
+ <li>The veneer routine <tt>RA__Ptr</tt> can be used.
  </ul>
 </ul>
 
